--- a/esp32/potentiometer/index.html
+++ b/esp32/potentiometer/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.BPtP4E8y.css"
+      href="/assets/static/app_generated_index-6937cd5a.BEkso2fM.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -72,8 +72,8 @@
     >
       <div class="w-text chewl0k cs8jnol c1d73b5o c192du2r c136d2hq cnykfat">
         Keep in mind these resistor colors<a
-          href="/esp32/abc/secret"
           class="w-rich-text-link cef8lky c1u5brzr c1pr4ejo"
+          href="#"
           >!</a
         >
       </div>
@@ -513,28 +513,23 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.4LQbqxJH.js"
+      src="/assets/entries/entry-server-routing.D2AMEKIU.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_esp32_potentiometer.B5mOoP0I.js"
+      href="/assets/entries/pages_esp32_potentiometer.CzPmCItb.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-DJl-fdYE.js"
+      href="/assets/chunks/chunk-BobsVryZ.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-5LPJm-p8.js"
-      as="script"
-      type="text/javascript"
-    /><link
-      rel="modulepreload"
-      href="/assets/chunks/chunk-BJ1zdyVq.js"
+      href="/assets/chunks/chunk-DEzZCgSH.js"
       as="script"
       type="text/javascript"
     />
