--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.BPtP4E8y.css"
+      href="/assets/static/app_generated_index-6937cd5a.BEkso2fM.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -151,18 +151,18 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.4LQbqxJH.js"
+      src="/assets/entries/entry-server-routing.D2AMEKIU.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.CbnOg0XP.js"
+      href="/assets/entries/pages_index.BmBGp0FI.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-DJl-fdYE.js"
+      href="/assets/chunks/chunk-BobsVryZ.js"
       as="script"
       type="text/javascript"
     />
