--- a/esp32/getting-started/index.html
+++ b/esp32/getting-started/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.BPtP4E8y.css"
+      href="/assets/static/app_generated_index-6937cd5a.BEkso2fM.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -411,28 +411,23 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.4LQbqxJH.js"
+      src="/assets/entries/entry-server-routing.D2AMEKIU.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_esp32_getting-started.f7G-BYUv.js"
+      href="/assets/entries/pages_esp32_getting-started.DATD9eJD.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-DJl-fdYE.js"
+      href="/assets/chunks/chunk-BobsVryZ.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-5LPJm-p8.js"
-      as="script"
-      type="text/javascript"
-    /><link
-      rel="modulepreload"
-      href="/assets/chunks/chunk-BJ1zdyVq.js"
+      href="/assets/chunks/chunk-DEzZCgSH.js"
       as="script"
       type="text/javascript"
     />
